fix: remove border-collapse

--- a/src/picker/css/container.less
+++ b/src/picker/css/container.less
@@ -62,3 +62,8 @@
   text-align: center;
   color: @secondary_text_color;
 }
+
+.container__footer-link {
+  text-decoration: none;
+  color: @secondary_text_color;
+}
