--- a/src/picker/css/filetable.less
+++ b/src/picker/css/filetable.less
@@ -20,7 +20,6 @@
 
 .ftable__table {
   position: relative;
-  border-collapse: collapse;
 }
 
 .ftable__th {
